in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.

* Discontinued ancient 'constdefs' command.  INCOMPATIBILITY, use
'definition' instead.

* Document antiquotations @{class} and @{type} for printing classes
and type constructors.


*** HOL ***

* Code generator: globbing constant expressions "*" and "Theory.*" have been
replaced by the more idiomatic "_" and "Theory._".  INCOMPATIBILITY.

* Theory Enum (for explicit enumerations of finite types) is now part of
the HOL-Main image. INCOMPATIBILITY: All constants of the Enum theory now 
have to be referred to by its qualified name.
  constants
    enum -> Enum.enum
    nlists -> Enum.nlists
    product -> Enum.product

* Renamed theory Fset to Cset, type Fset.fset to Cset.set, in order to
avoid confusion with finite sets.  INCOMPATIBILITY.

* Quickcheck's generator for random generation is renamed from "code" to
"random".  INCOMPATIBILITY.

* Theory Multiset provides stable quicksort implementation of sort_key.

* Quickcheck now has a configurable time limit which is set to 30 seconds
by default. This can be changed by adding [timeout = n] to the quickcheck
command. The time limit for Auto Quickcheck is still set independently.

* New command 'partial_function' provides basic support for recursive
function definitions over complete partial orders. Concrete instances
are provided for i) the option type, ii) tail recursion on arbitrary
types, and iii) the heap monad of Imperative_HOL. See
HOL/ex/Fundefs.thy and HOL/Imperative_HOL/ex/Linked_Lists.thy for
examples.

* Predicates `distinct` and `sorted` now defined inductively, with nice
induction rules.  INCOMPATIBILITY: former distinct.simps and sorted.simps
now named distinct_simps and sorted_simps.
